--- a/app/styles/config/_normalize.scss
+++ b/app/styles/config/_normalize.scss
@@ -31,7 +31,7 @@ body {
    font-family: $userfont, sans-serif;
    font-size: 1.4rem;
    background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 5e-05) 49.88%, rgba(0, 0, 0, 0.5) 100%);
-   background-image: url("../../img/Pattern-1.png");
+   background-image: url("../img/Pattern-1.png");
    background-position: 0 0;
    overflow-x: hidden;
    font-feature-settings: "pnum" on, "lnum" on;
